--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto-condensed": "^0.1.0",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "^16.13.1",
@@ -27,9 +30,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
